# rlay-ontology

./: .gitignore  Cargo.toml  LICENSE-MIT  Makefile  README.md  rust-toolchain-clippy  update_grammar.sh
.circleci/: config.yml
extract-grammar/: CONCEPT.md  jest.config.js  package-lock.json  package.json
extract-grammar/src/: bnf_grammar.pegjs  generatePb2.js  generateSolidityContracts.js  generateSolidty.js  generateV0FieldMapping.js  generateV0Intermediate.js  index.js  manual.js  mapperHelpers.js  params.js  parseBnf.js  parseBnfCli.js
extract-grammar/src/__tests__/: full.grammar  implemented.grammar  multiple_definitions.grammar  parseBnf.test.js  rhs_function.grammar  rhs_function_single_param.grammar  rhs_mixed_function.grammar  rhs_multiple_multiline.grammar  rhs_multiple_singleline.grammar  rhs_zero_or_more.grammar  rhs_zero_or_one.grammar  section_1.grammar  simple.grammar
rlay_ontology/: Cargo.toml  build.rs  build_features.sh
rlay_ontology/src/: bin.rs  intermediate.json  lib.rs  ontology.proto  rlay.ontology.macros.rs
rlay_ontology/src/ontology/: mod.rs  rlay.ontology.macros.rs  web3.rs
rlay_ontology/tests/: core.rs  protobuf_format.rs  web3.rs
rlay_ontology_build/: Cargo.toml
rlay_ontology_build/src/: compact.rs  core.rs  entities.rs  intermediate.rs  lib.rs  v0.rs  web3.rs
rlay_ontology_js/: Cargo.toml  prepare-pkg.js  test.js
rlay_ontology_js/src/: lib.rs
rlay_ontology_stdweb/: Cargo.toml  rust-toolchain
rlay_ontology_stdweb/src/: serializable_types.rs  web.rs
