[package]
name = "rlay_ontology"
version = "0.2.1"
authors = ["Maximilian Goisser <goisser94@gmail.com>"]

[lib]
name = "rlay_ontology"
path = "src/lib.rs"

[[example]]
name = "example_hashes"
path = "src/bin.rs"
required-features = ["examples"]

[dependencies]
integer-encoding = { version = "1.0", optional = true }
multihash = { version =  "0.8.0", optional = true }
cid = { version = "0.2.3", optional = true }
multibase = { version = "0.6.0", optional = true }
serde_derive = { version =  "=1.0.79", optional = true }
serde_cbor = { version = "0.9.0", git = "https://github.com/hobofan/cbor", branch = "no_std", optional = true }
serde_bytes = { version = "0.10.4", git = "https://github.com/hobofan/bytes", branch = "nightly-2018-11-08", default-features = false, optional = true }
serde = { version = "=1.0.79", default-features = false, optional = true }

# feature std
prost = { version = "0.3.0", optional = true }
prost-derive = { version = "0.3.0", optional = true }
bytes = { version = "0.4.6", optional = true }
rustc-hex = { version = "2.0.1", optional = true }

# feature serialize2
unsigned-varint = { version = "0.2.1", git = "https://github.com/hobofan/unsigned-varint", branch = "no_std", default-features = false, optional = true }

# feature web3_compat
web3 = { version = "0.4.0", optional = true }

# feature pwasm
pwasm-std = { version = "0.10", optional = true }

# feature examples
itertools = { version = "0.7.6", optional = true }
serde_json = { version = "1", optional = true }

[build-dependencies]
rlay_ontology_build = { path = "../rlay_ontology_build" }

[features]
default = ["std"]
std = ["prost", "prost-derive", "bytes", "rustc-hex", "serde/std", "serde_bytes/std", "serialize"]
serialize = ["multihash", "cid", "multibase", "serde_derive", "serde_cbor", "serde_bytes", "serde", "integer-encoding"]
serialize2 = ["unsigned-varint"]

web3_compat = ["web3"]
pwasm = ["pwasm-std"]

examples = ["serde_json", "itertools"]
