[package]
name = "rlay_ontology"
description = "Rlay ontology model"
version = "0.2.3"
authors = ["Maximilian Goisser <goisser94@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

[lib]
name = "rlay_ontology"
path = "src/lib.rs"

[[example]]
name = "example_hashes"
path = "src/bin.rs"
required-features = ["examples"]

[dependencies]
ambassador = "0.2.1"

integer-encoding = { version = "1.0", optional = true }
multihash = { version =  "0.8.0", optional = true }
cid_fork_rlay = { version = "0.3.1", optional = true }
multibase = { version = "0.6.0", optional = true }
serde_derive = { version =  "^1.0.79", optional = true }
serde_cbor = { version = "0.10.1", default-features = false, optional = true }
serde_bytes = { version = "0.11.1", default-features = false, optional = true }
serde = { version = "^1.0.79", default-features = false, optional = true }

# feature std
prost = { version = "0.5.0", optional = true }
bytes = { version = "0.4.6", optional = true }
rustc-hex = { version = "2.0.1", optional = true }

# feature web3_compat
ethereum-types = { version = "0.4.0", default-features = false, optional = true }

# feature pwasm
pwasm-std = { version = "0.10", optional = true }

# feature wasm-bindgen
wasm-bindgen = { version = "0.2.0", optional = true }

# feature examples
itertools = { version = "0.7.6", optional = true }
serde_json = { version = "1", optional = true }
strum_macros = "0.16.0"

[build-dependencies]
rlay_ontology_build = { version = "0.2.3", path = "../rlay_ontology_build" }

[dev-dependencies]
serde_json = { version = "1" }

[features]
default = ["std"]
std = ["prost", "bytes", "rustc-hex", "serde/std", "serde_bytes/std",  "serde_cbor/std", "ethereum-types/std", "serialize"]
serialize = ["multihash", "cid_fork_rlay", "multibase", "serde_derive", "serde_cbor", "serde_bytes", "serde", "integer-encoding"]

web3_compat = ["ethereum-types"]
pwasm = ["pwasm-std"]
wasm_bindgen = ["wasm-bindgen", "web3_compat"]

examples = ["serde_json", "itertools"]

[package.metadata.release]
no-dev-version = true
tag-prefix = ""
tag-name = "{{version}}"
