[package]
name = "rlay_ontology_build"
description = "Rlay ontology model"
version = "0.2.5"
authors = ["Maximilian Goisser <goisser94@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0.66", default-features = false }
serde_derive = "1.0.66"
heck = "0.3.0"
syn = { version = "1.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
serde_json = { version = "1.0.27", optional = true }

[features]
default = ["std"]
std = ["serde_json"]
