[package]
name = "rlay_ontology_js"
version = "0.1.0-alpha.0"
authors = ["Maximilian Goisser <goisser94@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
rlay_ontology = { path = "../rlay_ontology", features = ["wasm_bindgen"] }

wasm-bindgen = { version = "0.2.0", features = ["serde-serialize"] }
cid = { version = "0.3.0" }
serde = "^1.0.59"
serde_derive = "^1.0.59"
serde_json = "^1.0.37"
bytes = { git = "https://github.com/ThinkAlexandria/bytes.git", rev = "26b32fb605392015d0efdf7243b064b53759885d" }

[dev-dependencies]
wasm-bindgen-test = "0.2"
